fix:新增/QueryManualSensorListByMonitor接口等